# opus-cicala

./: README.md  pyproject.toml
notebooks/: exploration.ipynb
src/opus_cicala/: main.py
src/opus_cicalae/: main.py
tests/: test_main.py
