[project]
name = "opus-cicala"
version = "0.1.0"
description = "Starter UV project for Opus Cicala."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
opus-cicala = "opus_cicala.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
